# rigor

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  rigor.ai-generated.yaml  rigor.yaml
.claude/: settings.json
crates/rigor/: Cargo.toml
crates/rigor-harness/: Cargo.toml
crates/rigor-harness/src/: ca.rs  env_lock.rs  home.rs  lib.rs  mock_llm.rs  proxy.rs  sse.rs  subprocess.rs
crates/rigor-test/: Cargo.toml
crates/rigor-test/src/: bench.rs  e2e.rs  main.rs  report.rs
crates/rigor-test/tests/: smoke.rs
crates/rigor/benches/: dfquad_scaling.rs  evaluation_only.rs  filter_chain_overhead.rs  hook_latency.rs
crates/rigor/src/: cost.rs  lib.rs  main.rs  paths.rs
crates/rigor/src/alerting/: mod.rs
crates/rigor/src/claim/: confidence.rs  extractor.rs  hedge_detector.rs  heuristic.rs  mod.rs  transcript.rs  types.rs
crates/rigor/src/cli/: alert.rs  config.rs  corpus.rs  diff.rs  eval.rs  gate.rs  graph.rs  ground.rs  init.rs  log.rs  logs.rs  map.rs  mod.rs  refine.rs  scan.rs  search.rs  serve.rs  sessions.rs  setup.rs  show.rs  trust.rs  validate.rs  web.rs
crates/rigor/src/config/: lookup.rs  mod.rs
crates/rigor/src/constraint/: graph.rs  loader.rs  mod.rs  types.rs  validator.rs
crates/rigor/src/corpus/: client.rs  manifest.rs  mod.rs  record.rs  recording.rs  stats.rs
crates/rigor/src/daemon/: chat.rs  context.rs  gate.rs  gate_api.rs  governance.rs  mod.rs  observability_api.rs  proxy.rs  sni.rs  tls.rs  ws.rs
crates/rigor/src/daemon/egress/: chain.rs  claim_injection.rs  ctx.rs  frozen.rs  mod.rs
crates/rigor/src/defaults/: deps.rs  go.rs  mod.rs  rust.rs
crates/rigor/src/evaluator/: mod.rs  pipeline.rs  relevance.rs
crates/rigor/src/fallback/: config.rs  minimums.rs  mod.rs  types.rs
crates/rigor/src/hook/: input.rs  mod.rs  output.rs
crates/rigor/src/logging/: annotate.rs  backend.rs  mod.rs  query.rs  session.rs  session_registry.rs  types.rs  violation_log.rs
crates/rigor/src/lsp/: client.rs  mod.rs
crates/rigor/src/memory/: content_store.rs  episodic.rs  mod.rs  onnx_host.rs
crates/rigor/src/observability/: mod.rs  tracing.rs
crates/rigor/src/policy/: engine.rs  input.rs  mod.rs
crates/rigor/src/violation/: collector.rs  formatter.rs  mod.rs  types.rs
crates/rigor/tests/: b1_kill_switch.rs  b2_auto_retry.rs  b3_pii_redact.rs  claim_consistency.rs  claim_extraction_e2e.rs  connect_tunnel.rs  corpus_proxy_replay.rs  corpus_replay.rs  dogfooding.rs  egress_integration.rs  fallback_integration.rs  false_positive.rs  firing_matrix.rs  harness_smoke.rs  installed_binary_drift.rs  integration_constraint.rs  integration_hook.rs  invariants.rs  pid_lifecycle_e2e.rs  proxy_dfquad_cohesion.rs  proxy_failure_modes.rs  proxy_hotpath.rs  proxy_pipeline_cohesion.rs  real_llm.rs  stop_hook_e2e.rs  true_e2e.rs
crates/rigor/tests/fixtures/false_positive/axum-is-tower-based/: comparative.json  negated.json  quoted.json
crates/rigor/tests/fixtures/false_positive/regorus-capabilities/: negated.json  quoted.json
crates/rigor/tests/fixtures/false_positive/reqwest-is-http-client/: comparative.json  negated.json
crates/rigor/tests/fixtures/false_positive/rigor-proxy-topology/: negated.json  quoted.json
crates/rigor/tests/fixtures/false_positive/rust-no-exceptions/: comparative.json  meta.json  negated.json  quoted.json
crates/rigor/tests/fixtures/false_positive/rust-no-gc/: comparative.json  meta.json  negated.json  quoted.json
crates/rigor/tests/fixtures/false_positive/rust-no-inheritance/: comparative.json  meta.json  negated.json  quoted.json
crates/rigor/tests/fixtures/false_positive/rust-no-null/: comparative.json  historical.json  negated.json  quoted.json
crates/rigor/tests/fixtures/false_positive/rust-ownership/: negated.json  qualified.json  quoted.json
crates/rigor/tests/fixtures/false_positive/tokio-is-async-runtime/: comparative.json  negated.json  quoted.json
crates/rigor/tests/fixtures/firing_matrix/action-gates-orthogonal/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/auto-retry-max-one/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/axum-is-tower-based/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/block-drops-upstream/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/content-store-categories-ttl/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/dfquad-deterministic-iteration/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/enforcement-requires-traffic-routing/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/epistemic-base-strengths/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/hyper-v1-http1-http2/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/regorus-capabilities/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/reqwest-is-http-client/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/rigor-env-vars-semantics/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/rigor-proxy-topology/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/rust-no-exceptions/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/rust-no-gc/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/rust-no-inheritance/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/rust-no-null/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/rust-ownership/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/rustls-ring-backend/: should_fire.json  should_not_fire.json
crates/rigor/tests/fixtures/firing_matrix/serde-yml-not-serde-yaml/: should_fire.json  should_not_fire.json
crates/rigor/tests/support/: mod.rs
(+1049 files in other folders)
