[workspace]
members = [
    "crates/rigor",
    "crates/rigor-harness",
    "crates/rigor-test",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
tempfile = "3"
clap = { version = "4.5", features = ["derive"] }
