[package]
name = "rigor-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test harness primitives for rigor: MockAgent, MockLLM, TestDaemon, and friends. Dev-dependency and publishable for future adapter authors."

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
axum = { version = "0.8", features = ["ws"] }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
tempfile = "3"
serde_json = "1.0"
futures-util = "0.3"
tokio-stream = "0.1"
anyhow = "1.0"
bytes = "1"
