[package]
name = "rigor-test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dev-only test orchestrator for rigor. Not shipped to end users. Runs Layer 3 (E2E) and Layer 4 (benchmark) suites, produces HTML reports."

[[bin]]
name = "rigor-test"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"], default-features = false }
rigor-harness = { path = "../rigor-harness" }

[dev-dependencies]
tempfile = "3"
