[package]
name = "rigor"
version = "0.1.0"
edition = "2021"
description = "Epistemic constraint enforcement for LLM outputs"
license-file = "LICENSE"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
serde_yml = "0.0.12"
regorus = "0.2"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
shellexpand = "3.1"
dirs = "5.0"

# OpenTelemetry (graceful degradation if not configured)
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27"
opentelemetry-stdout = { version = "0.27", features = ["trace"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

# Claim extraction dependencies
serde-jsonlines = "0.7"
unicode-segmentation = "1.12"
regex = "1.11"
once_cell = "1.19"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Logging dependencies
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
owo-colors = "4"

# Web viewer + daemon dependencies
axum = { version = "0.8", features = ["ws"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
open = "5"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls", "gzip", "brotli", "deflate", "blocking"], default-features = false }
futures-util = "0.3"
axum-extra = { version = "0.10", features = ["typed-header"] }
http = "1"
bytes = "1"
flate2 = "1"
tokio-stream = "0.1"
brotli = "8"
libc = "0.2"

# TLS termination for daemon (LD_PRELOAD mode)
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
tower = { version = "0.5", features = ["util"] }
sanitize-pii = "0.1.1"
async-trait = "0.1"
thiserror = "2"

# LSP client for code-anchored constraint verification
lsp-types = "0.97"
sha2 = "0.10"
twox-hash = { version = "2.0", default-features = false, features = ["xxhash64"] }

# Content store (Phase 0E) — hash-keyed, TTL'd audit + compression + verdict cache
dashmap = "6"
moka = { version = "0.12", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
rigor-harness = { path = "../rigor-harness" }
proptest = "1"

[[bench]]
name = "hook_latency"
harness = false

[[bench]]
name = "evaluation_only"
harness = false

[[bench]]
name = "dfquad_scaling"
harness = false

[[bench]]
name = "filter_chain_overhead"
harness = false
